--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,36 @@ version: '3'
 
 services:
   postgres-database:
-    container_name: 'postgres-database'
-    restart: always
-    image: postgres:latest
+    image: postgres:13.12
     ports:
       - 5432:5432
-    environment:
-      - POSTGRES_PASSWORD=helloworld2002
+    env_file:
+      - docker.env
+    networks:
+      - postgres
 
-  document-api:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: 'document-management-api'
-    restart: always
-    environment:
-      - PORT=${PORT}
+    env_file:
+      - docker.env
     ports:
       - 3000:3000
     depends_on:
       - postgres-database
     volumes:
       - ./src:/app/src
+    networks:
+      - postgres
 
   adminer:
-    image: adminer
-    restart: always
+    image: dockette/adminer:full-php5
     ports:
-      - 8080:8080
+      - 8080:80
+    networks:
+      - postgres
+
+networks:
+  postgres:
+    driver: bridge
